--- a/Mazesolver/MazeSolver/MainWindow.xaml
+++ b/Mazesolver/MazeSolver/MainWindow.xaml
@@ -48,7 +48,7 @@
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Margin="10,10,10,0" Click="button_cancel_process" >Cancel Process</Button>
             <Button Grid.Column="1" Margin="10,10,10,0" Click="button_show_info_maze_solver">Show info MazeSolver</Button>
-            <Button Grid.Column="2" Margin="10,10,10,0" Click="button_clear_info">Clear Information Control</Button>
+            <Button Grid.Column="2" Margin="10,10,10,0" Click="button_clear_all">Clear All</Button>
         </Grid>
         <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" x:Name="CanvasBorder">
             <Canvas x:Name="CanvasMaze"/>
